# lsa-whisperer

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  requirements.txt
.github/workflows/: build.yml
bofs/: CMakeLists.txt  dsrcli.cpp  dump_credential_key.cpp  get_device_sso_cookie.cpp  get_ntlmv1_response.cpp  get_pop_token.cpp  get_sso_cookie.cpp  list_logon_sessions.cpp  load_ssp.cpp  purge_tickets.cpp  show_cloud_config.cpp  show_domain_config.cpp  show_kerberos_config.cpp  transfer_creds.cpp  whoami.cpp
cmake/: ar2objs.py  requirements.cmake
docs/: conf.py
include/: CMakeLists.txt  cli.hpp  commands.hpp  sspi.hpp
include/sspi/: all.hpp  cloudap.hpp  crypt.hpp  kerberos.hpp  livessp.hpp  lsa.hpp  msv1_0.hpp  negoexts.hpp  negotiate.hpp  pku2u.hpp  rpc.hpp  schannel.hpp  spm.hpp  tspkg.hpp  wdigest.hpp
lwdk/: .gitattributes  CMakeLists.txt  LICENSE.txt  README.md
lwdk/asn1/: cssp.asn  gssapi.asn  krb5.asn  ldap.asn  pkcs12.asn  rdpear.asn  spnego.asn  x509.asn
lwdk/cmake/: midl.cmake  ms-dtyp.idl
lwdk/defs/: msasn1.def  ntasn1.def
lwdk/include/: lazy.h  lwdk.h
lwdk/include/cpdk/: bcrypt.h  bcrypt_provider.h  msclmd.h  ncrypt_provider.h
lwdk/include/lwdk/: cloudap.h  cng.h  credman.h  credssp.h  crypt.h  cssp.h  dpapi.h  dpaping.h  efs.h  fve.h  gssapi.h  kerberos.h  krb5.h  ksecdd.h  ldap.h  livessp.h  lsa.h  msv1_0.h  native.h  negoexts.h  negotiate.h  netlogon.h  ngc.h  ntasn1.h  ntlm.h  pkcs12.h  pku2u.h  rdpear.h  schannel.h  spm.h  spnego.h  tspkg.h  vault.h  wdigest.h  x509.h
lwdk/include/um/: ntsecapi.h  ntsecpkg.h
lwdk/pickling/: CMakeLists.txt  cloudap.acf  cloudap.idl  credisoremote.acf  credisoremote.idl  kerberos.acf  kerberos.idl  wlid.acf  wlid.idl
lwdk/rpc/: CMakeLists.txt  ms-sspir.acf  ms-sspir.idl  ngc.idl  wlid.acf  wlid.idl
lwdk/sources/: CMakeLists.txt  cssp.c  gssapi.c  krb5.c  ldap.c  pkcs12.c  rdpear.c  spnego.c  x509.c
modules/: CMakeLists.txt  cloudapcache.cpp  cloudapcache.def  token.cpp  token.def  wlid.cpp  wlid.def
source/: CMakeLists.txt  boflib.cpp  cli.cpp  commands.cpp  main.cpp  sspir.acf  sspir.idl
source/sspi/: all.cpp  cloudap.cpp  crypt.cpp  kerberos.cpp  livessp.cpp  lsa.cpp  msv1_0.cpp  negoexts.cpp  negotiate.cpp  pku2u.cpp  rpc.cpp  schannel.cpp  spm.cpp  wdigest.cpp
wiki/: Usage.asciidoc  _footer.asciidoc  _sidebar.asciidoc  bofs.asciidoc  spm.asciidoc
wiki/modules/: cloudapcache.asciidoc  token.asciidoc  wlid.asciidoc
wiki/ssps/: cloudap.asciidoc  credssp.asciidoc  kerberos.asciidoc  livessp.asciidoc  msapsspc.asciidoc  msnsspc.asciidoc  msv1_0.asciidoc  negoexts.asciidoc  negotiate.asciidoc  pku2u.asciidoc  schannel.asciidoc  sfapm.asciidoc  tspkg.asciidoc  wdigest.asciidoc
